--- a/generate_password/src/App.css
+++ b/generate_password/src/App.css
@@ -1,5 +1,29 @@
-.App {
-  text-align: center;
+.colorsDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(211, 200, 200);
+  min-width: 50%;
+  padding: 10px;
+  border-radius: 20px;
+  gap: 2%;
+}
+
+.full-screen {
+  display: flex;
+  align-items: flex-end; 
+  justify-content: center;
+  min-height: 100vh;
+  padding-bottom: 100px;
+  margin: 0;
+  background: rgb(251, 251, 251);
+}
+
+.btnColor{
+  border-radius: 19px;
+  padding: 10px;
+  width: 100px;
+  color: white;
 }
 
 .App-logo {
