--- a/generate_password/src/App.css
+++ b/generate_password/src/App.css
@@ -1,3 +1,29 @@
+.password-generator-main {
+  display: flex;
+  align-items: flex-end; 
+  justify-content: center;
+}
+
+.password-generator-box {
+  max-width: 90%;
+  width: 50%;
+  background-color: rgb(29, 28, 28);
+  color: white;
+  margin: 0;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.full-screen {
+  display: flex;
+  align-items: flex-end; 
+  justify-content: center;
+  min-height: 80vh;
+  padding-bottom: 100px;
+  margin: 0;
+  background: rgb(251, 251, 251);
+}
+
 .colorsDiv {
   display: flex;
   align-items: center;
@@ -7,16 +33,6 @@
   padding: 10px;
   border-radius: 20px;
   gap: 2%;
-}
-
-.full-screen {
-  display: flex;
-  align-items: flex-end; 
-  justify-content: center;
-  min-height: 100vh;
-  padding-bottom: 100px;
-  margin: 0;
-  background: rgb(251, 251, 251);
 }
 
 .btnColor{
